@@ -3,6 +3,7 @@ partconf (0.21) UNRELEASED; urgency=low
   * Stephen R. Marenka
     - Make sure p->descriptions gets a default.
     - Add simulated devfs support for kernel 2.2.x.
+    - Skip loopback mounted cdrom in find_mountdevice.
   * Translators:
     - Peter Mann: Update Slovak translation
     - Carlos Z.F. Liu
